Fixed headline letter spacing for desktop

--- a/unit1Challenge/Unsolved/styles.css
+++ b/unit1Challenge/Unsolved/styles.css
@@ -140,7 +140,7 @@ body {
 @media only screen and (min-width: 875px) {
   .headline {
     font-size: 9.5em;
-    letter-spacing: -10px;
+    letter-spacing: -9px;
     line-height: .85em;
     margin: 0;
   }
